k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-springboot-app-ingress
  labels:
    app: devops-springboot-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: devops-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-springboot-app-service
            port:
              number: 80
